[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querky"
version = "0.1.1"
requires-python = ">= 3.10"
authors = [
    {name = "Andrei Karavatski", email = "verolomnyy@gmail.com"}
]
maintainers = [
    {name = "Andrei Karavatski", email = "verolomnyy@gmail.com"}
]
description = "Turn your raw SQL queries into pure Python PEP484 type annotated functions with a single decorator."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "sql",
    "async",
    "postgres",
    "postgresql",
    "psql",
    "pgsql",
    "code generation",
    "module generation",
    "decorator",
]

[project.urls]
Homepage = "https://github.com/racinette/querky"
Issues = "https://github.com/racinette/querky/issues"

[project.optional-dependencies]
asyncpg = ["asyncpg"]
